# rrl_bracu_alter_ws

./: .gitignore  RRL2026 Mapping Finalizing.docx  frames_2026-05-09_14.05.37.gv  guide.txt  map_guide.md
exports/: RoboCup2026-BracUAlter-ConnectedTest-13-12-00-pois.csv  RoboCup2026-BracUAlter-FinalRulesTest-01-40-24-pois.csv  RoboCup2026-BracUAlter-FinalSystemTest-01-32-03-pois.csv  RoboCup2026-BracUAlter-FinalSystemTest2-01-34-00-pois.csv  RoboCup2026-BracUAlter-FinalSystemTest4-01-36-59-pois.csv  RoboCup2026-BracUAlter-PipelineTest-06-02-34-pois.csv  RoboCup2026-BracUAlter-RealSenseObjectTFTest-14-06-47-pois.csv  RoboCup2026-BracUAlter-RealSenseObjectTest-13-45-44-pois.csv  RoboCup2026-BracUAlter-RealSenseObjectTest2-14-02-39-pois.csv  RoboCup2026-BracUAlter-RulebookValidation-01-53-19-pois.csv  health_check_map.tif  pipeline_test_map.tif
src/cartographer_slam/: CMakeLists.txt  package.xml
src/cartographer_slam/config/: cartographer_2d.lua
src/cartographer_slam/launch/: cartographer_2d.launch.py
src/cartographer_slam/scripts/: path_tracker.py  save_map_geotiff.py
src/csv_logger/: package.xml  setup.cfg  setup.py
src/csv_logger/csv_logger/: logger_node.py
src/object_localizer/: package.xml  setup.cfg  setup.py
src/object_localizer/object_localizer/: localizer_node.py
src/rrl_bringup/: package.xml  setup.cfg  setup.py
src/rrl_bringup/launch/: rrl_bringup.launch.py
src/rrl_interfaces/: CMakeLists.txt  package.xml
src/rrl_interfaces/msg/: ObjectDetection.msg  ObjectDetectionArray.msg  ObjectLocalization.msg
src/serial_motor_bridge/: CMakeLists.txt  README.md  package.xml
src/serial_motor_bridge/arduino/differential_drive_controller/: differential_drive_controller.ino
src/serial_motor_bridge/config/: serial_motor_params.yaml  teleop_joy_params.yaml
src/serial_motor_bridge/launch/: robot_teleop.launch.py  serial_motor_bridge.launch.py  teleop_joy.launch.py
src/serial_motor_bridge/scripts/: serial_motor_node.py
src/serial_motor_bridge/serial_motor_bridge/: __init__.py
src/wit_ros2_imu/: imu_usb.rules  package.xml
src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
src/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
src/yolov8_detector/: package.xml  setup.py
src/yolov8_detector/yolov8_detector/: yolo_node.py
yolo/hazmat_50e_export/: README.md  requirements.txt  robocup_full_detector.py  robocup_hazmat_detector.py  robocup_rrl2026_detector.py
yolo/hazmat_50e_export/detection_results/: RoboCup2026-Bracu_Alter-Prelim1-17-39-28-pois.csv  RoboCup2026-MyTeam-Prelim1-02-09-44-pois.csv  RoboCup2026-MyTeam-Prelim1-02-11-18-pois.csv  RoboCup2026-MyTeam-Prelim1-02-15-58-pois.csv  RoboCup2026-TestTeam-Prelim1-02-22-11-pois.csv
yolo/hazmat_50e_export/runs/: args.yaml  results.csv
