<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartographer_slam</name>
  <version>0.0.1</version>
  <description>Cartographer 2D SLAM with RPLidar A3 and IMU</description>
  <maintainer email="bracualter-base@todo.todo">bracualter-base</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cartographer_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>wit_ros2_imu</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pillow</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
