<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrl_bringup</name>
  <version>0.0.0</version>
  <description>Master bringup launch for BRACU Alter RRL robot (SLAM + RealSense + YOLOv8 + CSV logger).</description>
  <maintainer email="siam.abdullah@g.bracu.ac.bd">sbuntu</maintainer>
  <license>MIT</license>

  <exec_depend>cartographer_slam</exec_depend>
  <exec_depend>yolov8_detector</exec_depend>
  <exec_depend>object_localizer</exec_depend>
  <exec_depend>csv_logger</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
